<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (c) 2008, The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); 
 * you may not use this file except in compliance with the License. 
 * You may obtain a copy of the License at 
 *
 *     http://www.apache.org/licenses/LICENSE-2.0 
 *
 * Unless required by applicable law or agreed to in writing, software 
 * distributed under the License is distributed on an "AS IS" BASIS, 
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
 * See the License for the specific language governing permissions and 
 * limitations under the License.
 */
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/ime_name">

    <PreferenceCategory android:key="pref_config" android:title="@string/pref_config">
        <Preference android:key="pref_enable" android:title="@string/pref_enable" android:summary="@string/pref_enable_summary"/>
        <Preference android:key="pref_select" android:title="@string/pref_select" android:summary="@string/pref_select_summary"/>
        <Preference android:key="pref_schemas" android:title="@string/pref_schemas" android:summary="@string/pref_schemas_summary"/>
        <Preference android:key="pref_colors" android:title="@string/pref_colors" android:summary="@string/pref_colors_summary"/>
        <Preference android:key="pref_reset" android:title="@string/pref_reset" android:summary="@string/pref_reset_summary"/>
    </PreferenceCategory>

    <PreferenceCategory android:key="pref_function" android:title="@string/pref_function">
        <!--<Preference android:key="pref_maintenance" android:title="@string/pref_maintenance" android:summary="@string/pref_maintenance_summary"/>-->
        <Preference android:key="pref_deploy_opencc" android:title="@string/pref_deploy_opencc" android:summary="@string/pref_deploy_opencc_summary"/>
        <Preference android:key="pref_deploy" android:title="@string/pref_deploy" android:summary="@string/pref_deploy_summary"/>
        <Preference android:key="pref_sync" android:title="@string/pref_sync" android:summary="@string/pref_sync_summary"/>
    </PreferenceCategory>

    <PreferenceCategory android:key="pref_help" android:title="@string/pref_help">
        <Preference android:key="pref_wiki" android:title="@string/pref_wiki">
            <intent android:action="android.intent.action.VIEW"
                    android:data="https://github.com/osfans/trime/wiki/UserGuide" />
        </Preference>
        <Preference android:key="pref_issues" android:title="@string/pref_issues">
            <intent android:action="android.intent.action.VIEW"
                    android:data="https://github.com/osfans/trime/issues" />
        </Preference>
        <Preference android:key="pref_qq1" android:title="@string/pref_qq1">
            <intent android:action="android.intent.action.VIEW"
                    android:data="mqqopensdkapi://bizAgent/qm/qr?url=http%3A%2F%2Fqm.qq.com%2Fcgi-bin%2Fqm%2Fqr%3Ffrom%3Dapp%26p%3Dandroid%26k%3DOBDf-6APetdl220ZnP4INo1Ty7xlfgSB" />
        </Preference>
        <Preference android:key="pref_qq2" android:title="@string/pref_qq2">
            <intent android:action="android.intent.action.VIEW"
                    android:data="mqqopensdkapi://bizAgent/qm/qr?url=http%3A%2F%2Fqm.qq.com%2Fcgi-bin%2Fqm%2Fqr%3Ffrom%3Dapp%26p%3Dandroid%26k%3DKkW6hWq64hh62lKsEqimTJ20Vh1xtiRp" />
        </Preference>
        <Preference android:key="pref_market" android:title="@string/pref_market">
            <intent android:action="android.intent.action.VIEW"
                    android:data="http://www.coolapk.com/apk/com.osfans.trime" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory android:key="pref_about" android:title="@string/pref_about">
        <Preference android:key="pref_ver" android:title="@string/pref_ver">
            <intent android:action="android.intent.action.VIEW"
                    android:data="https://github.com/osfans/trime" />
        </Preference>
        <Preference android:key="pref_librime_ver" android:title="@string/pref_librime_ver">
            <intent android:action="android.intent.action.VIEW"
                    android:data="https://github.com/rime/librime" />
        </Preference>
        <Preference android:key="pref_opencc_ver" android:title="@string/pref_opencc_ver">
            <intent android:action="android.intent.action.VIEW"
                    android:data="https://github.com/BYVoid/OpenCC" />
        </Preference>
        <Preference android:key="pref_licensing" android:title="@string/pref_licensing" android:summary="@string/pref_licensing_summary"/>
    </PreferenceCategory>

</PreferenceScreen>
